change website presentation

--- a/index.html
+++ b/index.html
@@ -3,29 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frontend Developer Portfolio</title>
+    <title>Katia - Frontend Developer</title>
     <meta
       name="description"
-      content="Portfolio of a React, Next.js, and React Native Developer"
+      content="Portfolio of Katia, a React, Next.js, and React Native Developer"
     />
-    <meta name="author" content="Frontend Developer" />
+    <meta name="author" content="Katia" />
 
-    <meta property="og:title" content="Frontend Developer Portfolio" />
+    <meta property="og:title" content="Katia - Frontend Developer" />
     <meta
       property="og:description"
       content="Specialized in React, Next.js, and React Native development"
     />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://katia-dev.netlify.app/" />
     <meta
       property="og:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
+      content="https://katia-dev.netlify.app/images/og-image.png"
     />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="@newkatrisha" />
     <meta
       name="twitter:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
+      content="https://katia-dev.netlify.app/images/og-image.png"
     />
 
     <!-- Favicon -->
